<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ranchan</string>
    <string name="app_label">@string/app_name</string>
    <string name="search_hint"></string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="trash_reason">Trash reason</string>
    <string name="new_thread">New thread</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="nickname">Nickname</string>
    <string name="anonymous">anonymous</string>
    <string name="nsfw">NSFW</string>
    <string name="pref_adult_summary_on">Not-safe-for-work content is enabled</string>
    <string name="pref_adult_summary_off">Not-safe-for-work content is hidden</string>
    <string name="home">Topics</string>
    <string name="viewed">Viewed</string>
    <string name="posted">Posted</string>
    <string name="add">Add</string>
    <string name="attach">Attach</string>
    <string name="image">Image</string>
    <string name="images">Images</string>
    <string name="chats">Chats</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="download">Download</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="rules_violation">Rules violation</string>
    <string name="CP">CP</string>
    <string name="spam">Spam</string>
    <string name="cancel">Cancel</string>
    <string name="text">text</string>
    <string name="thread_description">Thread description</string>
    <string name="tilde_separator">\u0020~\u0020</string>
</resources>
