<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
        >

        <item
                android:id="@+id/menu_search"
                android:title="@string/search"
                android:icon="@drawable/ic_action_search"
                android:showAsAction="ifRoom|collapseActionView"
                android:actionViewClass="android.widget.SearchView"
                />
        <item
                android:id="@+id/menu_add"
                android:title="@string/new_thread"
                android:icon="@drawable/ic_action_new"
                android:showAsAction="never"
                />

        <item
                android:id="@+id/menu_settings"
                android:title="@string/settings"
                android:icon="@drawable/ic_action_settings"
                android:showAsAction="never"
                />

        <item
                android:id="@+id/menu_about"
                android:title="@string/about"
                android:icon="@drawable/ic_action_about"
                android:showAsAction="never"
                />

</menu>